[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ucbl_logger"]

[project]
name = "ucbl-logger"
version = "1.0.1"
description = "A User-Centric Behaviour Log Markup Language Logger"
readme = "README.md"
requires-python = ">=3.6"
license = "CC-BY-NC-ND-4.0"
authors = [
    {name = "Evan Erwee", email = "evan@erwee.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "pytz",
    "kubernetes>=28.1.0",
    "psutil>=5.8.0",
    "boto3>=1.26.0",
]